--- a/config/dataset/scannetpp.yaml
+++ b/config/dataset/scannetpp.yaml
@@ -4,7 +4,7 @@ defaults:
   - optional view_sampler_dataset_specific_config@view_sampler: bounded_scannetpp
 
 name: scannetpp
-roots: [datasets/scannetpp_dslr, datasets/scannetpp_iphone]
+roots: [datasets/scannetpp]
 
 input_image_shape: [256, 256]
 original_image_shape: [720, 960]
