Override requirements versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ lightning
 black
 ruff
 hydra-core
-jaxtyping
+jaxtyping==0.2.34
 beartype
 wandb
-einops
+einops==0.8.0
 colorama
 scikit-image
 colorspacious
 matplotlib
-moviepy
+moviepy==1.0.3
 imageio
 git+https://github.com/rmurai0610/diff-gaussian-rasterization-w-pose.git
 timm
